--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -43,11 +43,12 @@
 
     <Button
         android:id="@+id/logout"
-        style="@style/FirebaseUI.Button"
+        style="@style/Widget.Material3.Button.TextButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:paddingHorizontal="8dp"
         android:onClick="logout"
+        android:paddingHorizontal="8dp"
         android:text="Logout"
         android:textStyle="bold"
         android:visibility="gone"
