--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,10 +7,35 @@
     tools:context=".ProfileActivityActivity">
 
     <include layout="@layout/header"
+        android:id="@+id/header"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         />
-    <include layout="@layout/bottom_navigation"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/include2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hello history" />
+        </LinearLayout>
+
+
+    </ScrollView>
+    <include
+        layout="@layout/bottom_navigation"
+        android:id="@+id/include2"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
