--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -6,14 +6,56 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivityActivity">
 
-    <include layout="@layout/header"
-        android:layout_height="wrap_content"
+    <include
+        android:id="@+id/include"
+        layout="@layout/header"
         android:layout_width="match_parent"
-        />
-    <include layout="@layout/bottom_navigation"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/include2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/greetUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hello !"
+                android:textSize="24sp"
+
+
+                />
+
+            <include
+                android:id="@+id/accountSelector"
+                layout="@layout/account_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+        </LinearLayout>
+
+
+    </ScrollView>
+
+
+    <include
+        android:id="@+id/include2"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
